@@ -50,6 +50,7 @@ lib/Apache/PerlRun.pm
 lib/Apache/PerlSections.pm
 lib/Apache/Registry.pm
 lib/Apache/RegistryNG.pm
+lib/Apache/RegistryBB.pm
 lib/Apache/RegistryLoader.pm
 lib/Apache/Resource.pm
 #lib/Apache/Safe.pm
