@@ -3,8 +3,6 @@ SHORT TERM STUFF (this section should always be empty in a release version!)
                  (well, close to it anyhow)
 ---------------------------------------------------------------------------
 
-- cache method for Apache::PerlRun
-
 - $ENV{PATH}
 
 - 'make htmldoc' (Brian Moseley)
